quarkus-calculator/adder_kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-21 - 20:13:22 +0000
  labels:
    app.kubernetes.io/name: adder
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: adder
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: adder
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-21 - 20:13:22 +0000
  labels:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: adder
  name: adder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0-SNAPSHOT
      app.kubernetes.io/name: adder
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
        app.quarkus.io/build-timestamp: 2022-07-21 - 20:13:22 +0000
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: adder
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/tberrey/adder:latest
          imagePullPolicy: Always
          name: adder
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-21 - 20:13:22 +0000
  labels:
    app.kubernetes.io/name: adder
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: adder
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: adder
                port:
                  name: http
            path: /adder
            pathType: Prefix
