quarkus-calculator/solver_kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-25 - 15:13:28 +0000
  labels:
    app.kubernetes.io/name: solver
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: solver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: solver
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-25 - 15:13:28 +0000
  labels:
    app.kubernetes.io/name: solver
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: solver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: solver
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
        app.quarkus.io/build-timestamp: 2022-07-25 - 15:13:28 +0000
      labels:
        app.kubernetes.io/name: solver
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/tberrey/solver:latest
          imagePullPolicy: Always
          name: solver
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 403f3072d15f9f25082ad5367a36405e905fec93
    app.quarkus.io/build-timestamp: 2022-07-25 - 15:13:28 +0000
  labels:
    app.kubernetes.io/name: solver
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: solver
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: solver
                port:
                  name: http
            path: /
            pathType: Prefix
